--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.2.5"
+    "mongoose": "^5.11.19"
   }
 }
