--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "client": "npm start --prefix client",
+    "seed": "node scripts/seedDB.js",
     "dev": "concurrently \"nodemon server.js\" \"npm run client\"",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
