--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node server.js",
     "client": "npm start --prefix client",
     "seed": "node scripts/seedDB.js",
+    "userSeed": "node scripts/userSeedDB.js",
     "dev": "concurrently \"nodemon server.js\" \"npm run client\"",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
